# mqt-dashboard

./: .pre-commit-config.yaml  README.md  _typos.toml  index.html  pyproject.toml  ruff.toml
.github/: renovate.json5
.github/workflows/: deploy-dashboard.yml  deploy-preview.yml
pr-preview/pr-10/: index.html
pr-preview/pr-10/static/: style.css
pr-preview/pr-11/: index.html
pr-preview/pr-7/: index.html
src/mqt/dashboard/: __init__.py  app.py  data_collection.py  static_site.py  visualization.py
src/mqt/dashboard/static/: mqt.csv  style.css
src/mqt/dashboard/templates/: index.html  repo_card.html
